syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/commands_group";
package api.commands_group;

message Group {
	optional string id = 1;
	string channelId = 2;
	string name = 3;
	string color = 4;
}

message GetAllResponse {
	repeated Group groups = 1;
}

message CreateRequest {
	Group group = 1;
}

message DeleteRequest {
	string id = 1;
}

message PutRequest {
	string id = 1;
	Group group = 2;
}
